--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
-This is the version 3.0.0 of GHS3DPLUGIN
+This is the version 3.1.0a2 of GHS3DPLUGIN
 Compatible with :
-	- KERNEL 3.0.0
-        - SALOMEGUI 3.0.0
-	- SMESH 3.0.0
+	- KERNEL 3.1.0a2
+        - SALOMEGUI 3.1.0a2
+	- SMESH 3.1.0a2
