PAL19680 CEA 4.1.2: Meshers: BLSURF, GHS3D and holed shapes       add more 4 advanced options

--- a/src/GUI/GHS3DPlugin_msg_en.po
+++ b/src/GUI/GHS3DPlugin_msg_en.po
@@ -74,8 +74,17 @@ msgstr "..."
 msgid "KEEP_WORKING_FILES"
 msgstr "To keep working files"
 
-msgid ""
-msgstr ""
+msgid "VERBOSE_LEVEL"
+msgstr "Verbose level"
+
+msgid "TO_ADD_NODES"
+msgstr "To create new nodes"
+
+msgid "RECOVERY_VERSION"
+msgstr "To use boundary recovery version"
+
+msgid "TEXT_OPTION"
+msgstr "Option as text"
 
 
 msgid "GHS3D_HYPOTHESIS"
